Add freenode webchat link and restyle the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="wrap">
-      <a href="https://t.me/cschat_tw">[ cschat.tw@freenode ]</a>
+      <section>
+        <!-- Follow the white rabbit. -->
+        <span>#cschat.tw</span><span class="blink">&#9612;</span><br/><a href="http://webchat.freenode.net/?channels=#cschat.tw">freenode</a><a href="https://t.me/cschat_tw">telegram</a>
+      </section>
     </div>
   </body>
 </html>
