Replace the IRC link with a web chat link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="wrap">
       <section>
         <!-- Follow the white rabbit. -->
-        <span>#cschat.tw</span><span class="blink">&#9612;</span><br/><a href="ircs://irc.libera.chat:6697">libera</a><a href="https://t.me/cschat_tw">telegram</a>
+        <span>#cschat.tw</span><span class="blink">&#9612;</span><br/><a href="https://web.libera.chat/?channels=#cschat.tw">libera</a><a href="https://t.me/cschat_tw">telegram</a>
       </section>
     </div>
   </body>
